Modify endpoint to throw stepcount and before step
