# golang/internal/docs/swagger.json
@@ -182,7 +182,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.ArticleOneStep"
+                            "$ref": "#/definitions/server.ArticleAllSteps"
                         }
                     }
                 }
@@ -252,28 +252,14 @@
                 "likes": {
                     "type": "string"
                 },
+                "stepCount": {
+                    "type": "integer"
+                },
                 "steps": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/server.Step"
                     }
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.ArticleOneStep": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "type": "string"
-                },
-                "likes": {
-                    "type": "string"
-                },
-                "step": {
-                    "$ref": "#/definitions/server.Step"
                 },
                 "title": {
                     "type": "string"
@@ -323,6 +309,9 @@
                     "type": "string"
                 },
                 "likes": {
+                    "type": "integer"
+                },
+                "stepCount": {
                     "type": "integer"
                 },
                 "title": {
